--- a/assets/css/extends.css
+++ b/assets/css/extends.css
@@ -43,7 +43,7 @@ body {
 
 .wrapper {
     min-height: 100%;
-    margin: 0 auto 0px auto;
+    margin: 0 auto 4em auto;
 }
 
 .btn-nav {
@@ -474,4 +474,7 @@ img {
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+}
+.min-height {
+    min-height: 1200px;
 }
