--- a/assets/css/extends.css
+++ b/assets/css/extends.css
@@ -7,7 +7,7 @@ body {
     padding-bottom: 40px;
     overflow: -moz-scrollbars-vertical;
     font-family: "Helvetica Neue", Helvetica, Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
-    background-image: url("../images/background.png");
+    background-image: url("../images/background.jpg");
     background-size: cover;
 }
 
